@@ -31,25 +31,25 @@ enum format_flags {
 	osf_percent = 1 << 3,
 	/// relative percentage of samples accumulated
 	osf_percent_cumulated = 1 << 4,
-	/// output the (demangled) symbol name
-	osf_symb_name = 1 << 5,
 	/// output debug filename and line nr.
-	osf_linenr_info = 1 << 6,
+	osf_linenr_info = 1 << 5,
 	/// output the image name for this line
-	osf_image_name = 1 << 7,
+	osf_image_name = 1 << 6,
+	/// output owning application name
+	osf_app_name = 1 << 7,
+	/// output the (demangled) symbol name
+	osf_symb_name = 1 << 8,
 	/**
 	 * Output percentage for details, not relative
 	 * to symbol but relative to the total nr of samples
 	 */
-	osf_percent_details = 1 << 8,
+	osf_percent_details = 1 << 9,
 	/**
 	 * Output percentage for details, not relative
 	 * to symbol but relative to the total nr of samples,
 	 * accumulated
 	 */
-	osf_percent_cumulated_details = 1 << 9,
-	/// output owning application name
-	osf_app_name = 1 << 10,
+	osf_percent_cumulated_details = 1 << 10,
 
 	/// These fields are considered immutable when showing details for one
 	/// symbol, we show them only when outputting the symbol itself but
